src/styles/globals.scss
@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap");

$black: #2b2b2b;
$white: #fff;
$open-sans: "Open Sans", system-ui;
$work-sans: "Work Sans", system-ui;

body {
  background: $black;
  color: $white;
  font-family: $open-sans;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

*:before,
*:after {
  box-sizing: inherit;
}

a {
  text-decoration: none;
  color: $white;
  font-weight: bold;
}

ul {
  list-style: none;
}

#feed {
  padding: 3rem;
  position: absolute;
  left: 250px;
}

